test/conformance/chainsaw/reports/admission/mutation/chainsaw-step-02-apply-1-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: default
spec:
  hostNetwork: false
  containers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
