test/conformance/chainsaw/reports/admission/mutation/chainsaw-step-02-assert-1-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: default
  labels:
    foo: bar
