test/conformance/chainsaw/reports/admission/mutation/chainsaw-step-03-assert-1-1.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  namespace: default
results:
- message: mutated Pod/good-pod in namespace default
  policy: add-labels
  result: pass
  rule: add-labels
  scored: true
  source: kyverno
scope:
  apiVersion: v1
  kind: Pod
  name: good-pod
  namespace: default
summary:
  error: 0
  fail: 0
  pass: 1
  skip: 0
  warn: 0
