test/conformance/chainsaw/reports/admission/mutation/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: basic-check-output
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - assert:
        file: chainsaw-step-01-assert-1-1.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1-1.yaml
    - assert:
        file: chainsaw-step-02-assert-1-1.yaml
  - name: step-03
    try:
    - assert:
        file: chainsaw-step-03-assert-1-1.yaml
